; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/media/hantro/extr_hantro_h1_jpeg_enc.c_hantro_h1_set_src_img_ctrl.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/media/hantro/extr_hantro_h1_jpeg_enc.c_hantro_h1_set_src_img_ctrl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hantro_dev = type { i32 }
%struct.hantro_ctx = type { %struct.TYPE_2__*, %struct.v4l2_pix_format_mplane }
%struct.TYPE_2__ = type { i32 }
%struct.v4l2_pix_format_mplane = type { i32 }

@H1_REG_IN_IMG_CTRL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hantro_dev*, %struct.hantro_ctx*)* @hantro_h1_set_src_img_ctrl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hantro_h1_set_src_img_ctrl(%struct.hantro_dev* %0, %struct.hantro_ctx* %1) #0 {
  %3 = alloca %struct.hantro_dev*, align 8
  %4 = alloca %struct.hantro_ctx*, align 8
  %5 = alloca %struct.v4l2_pix_format_mplane*, align 8
  %6 = alloca i32, align 4
  store %struct.hantro_dev* %0, %struct.hantro_dev** %3, align 8
  store %struct.hantro_ctx* %1, %struct.hantro_ctx** %4, align 8
  %7 = load %struct.hantro_ctx*, %struct.hantro_ctx** %4, align 8
  %8 = getelementptr inbounds %struct.hantro_ctx, %struct.hantro_ctx* %7, i32 0, i32 1
  store %struct.v4l2_pix_format_mplane* %8, %struct.v4l2_pix_format_mplane** %5, align 8
  %9 = load %struct.v4l2_pix_format_mplane*, %struct.v4l2_pix_format_mplane** %5, align 8
  %10 = getelementptr inbounds %struct.v4l2_pix_format_mplane, %struct.v4l2_pix_format_mplane* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @H1_REG_IN_IMG_CTRL_ROW_LEN(i32 %11)
  %13 = call i32 @H1_REG_IN_IMG_CTRL_OVRFLR_D4(i32 0)
  %14 = or i32 %12, %13
  %15 = call i32 @H1_REG_IN_IMG_CTRL_OVRFLB_D4(i32 0)
  %16 = or i32 %14, %15
  %17 = load %struct.hantro_ctx*, %struct.hantro_ctx** %4, align 8
  %18 = getelementptr inbounds %struct.hantro_ctx, %struct.hantro_ctx* %17, i32 0, i32 0
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @H1_REG_IN_IMG_CTRL_FMT(i32 %21)
  %23 = or i32 %16, %22
  store i32 %23, i32* %6, align 4
  %24 = load %struct.hantro_dev*, %struct.hantro_dev** %3, align 8
  %25 = load i32, i32* %6, align 4
  %26 = load i32, i32* @H1_REG_IN_IMG_CTRL, align 4
  %27 = call i32 @vepu_write_relaxed(%struct.hantro_dev* %24, i32 %25, i32 %26)
  ret void
}

declare dso_local i32 @H1_REG_IN_IMG_CTRL_ROW_LEN(i32) #1

declare dso_local i32 @H1_REG_IN_IMG_CTRL_OVRFLR_D4(i32) #1

declare dso_local i32 @H1_REG_IN_IMG_CTRL_OVRFLB_D4(i32) #1

declare dso_local i32 @H1_REG_IN_IMG_CTRL_FMT(i32) #1

declare dso_local i32 @vepu_write_relaxed(%struct.hantro_dev*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
